diesel_compile_tests/tests/fail/derive_deprecated/deprecated_sql_type.stderr
warning: #[sql_type] attribute form is deprecated
  = help: use `#[diesel(sql_type = foo)]` instead

error: unexpected end of input, expected `=`

  = help: The correct format looks like `#[diesel(sql_type = Foo)]`

  --> $DIR/deprecated_sql_type.rs:10:3
   |
10 | #[sql_type]
   |   ^^^^^^^^

error: expected `=`
  --> $DIR/deprecated_sql_type.rs:14:11
   |
14 | #[sql_type()]
   |           ^^

error: expected string literal
  --> $DIR/deprecated_sql_type.rs:18:14
   |
18 | #[sql_type = 1]
   |              ^

warning: #[sql_type] attribute form is deprecated
  = help: use `#[diesel(sql_type = 1)]` instead

error: expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> $DIR/deprecated_sql_type.rs:22:14
   |
22 | #[sql_type = "1"]
   |              ^^^

warning: #[sql_type] attribute form is deprecated
  = help: use `#[diesel(sql_type = foo)]` instead

error: unexpected end of input, expected `=`

  = help: The correct format looks like `#[diesel(sql_type = Foo)]`

  --> $DIR/deprecated_sql_type.rs:33:7
   |
33 |     #[sql_type]
   |       ^^^^^^^^

error: expected `=`
  --> $DIR/deprecated_sql_type.rs:39:15
   |
39 |     #[sql_type()]
   |               ^^

error: expected string literal
  --> $DIR/deprecated_sql_type.rs:45:18
   |
45 |     #[sql_type = 1]
   |                  ^

warning: #[sql_type] attribute form is deprecated
  = help: use `#[diesel(sql_type = 1)]` instead

error: expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> $DIR/deprecated_sql_type.rs:51:18
   |
51 |     #[sql_type = "1"]
   |                  ^^^

error[E0412]: cannot find type `foo` in this scope
 --> $DIR/deprecated_sql_type.rs:6:14
  |
6 | #[sql_type = "foo"]
  |              ^^^^^ not found in this scope

error[E0412]: cannot find type `foo` in this scope
  --> $DIR/deprecated_sql_type.rs:27:18
   |
27 |     #[sql_type = "foo"]
   |                  ^^^^^ not found in this scope
